--- a/chatbot/administrator/templates/master_admin.html
+++ b/chatbot/administrator/templates/master_admin.html
@@ -152,10 +152,20 @@
                     </div>
                 </div>
 
-                <div class="details slide-in" style="display: inline-block; width: 43%; margin-left: -700px;">
+                <div class="details slide-in" style="display: inline-block; width: 43%; ">
                     <h5 style="font-weight: bold;">User Logins</h5>
                     <p>Summary</p>
                     <canvas id="parentLoginsChart"></canvas>
+                </div>
+
+                <div class="clearfix" style="clear: both;"></div>
+                
+                <!-- New div added below the existing divs -->
+                <div class="details new-div slide-in" style="display: block;  width: 100%;">
+                    <h5 style="font-weight: bold;"></h5>
+                    <p>Progress of each registered student under the parent</p>
+                    
+                    <canvas id="studentProgressChart"></canvas>
                 </div>
             </div>
 
