--- a/chatbot/administrator/templates/book_detail.html
+++ b/chatbot/administrator/templates/book_detail.html
@@ -144,7 +144,7 @@ input[type="text"] {
 }
 
 /* Success message CSS */
-#successMessage {
+#successMessageAdd {
     display: none;
     margin-top: 20px;
     margin-bottom: 20px;
